--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-vitrix/lib/__pycache__/bullet.cpython-39.pyc
-vitrix/lib/__pycache__/enemy.cpython-39.pyc
-vitrix/lib/__pycache__/floor.cpython-39.pyc
-vitrix/lib/__pycache__/map.cpython-39.pyc
-vitrix/lib/__pycache__/network.cpython-39.pyc
-vitrix/lib/__pycache__/player.cpython-39.pyc
-vitrix/lib/__pycache__/server_chooser.cpython-39.pyc
+vitrix/lib/__pycache__/
+menu.build/
+menu.dist/
