--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 vitrix/lib/__pycache__/
 vitrix/__pycache__/
+vitrix/lib/__pycache__/
+vitrix/lib/weapons/__pycache__/
 venvs-config/
 data.txt
 build/
 dist/
 test/
+ib.cfg
