--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ vitrix/lib/__pycache__/
 vitrix/__pycache__/
 vitrix/lib/__pycache__/
 vitrix/lib/weapons/__pycache__/
+vitrix/lib/items/__pycache__/
 venvs-config/
 data.txt
 build/
