--- a/vitrix/user/settings.json
+++ b/vitrix/user/settings.json
@@ -3,7 +3,8 @@
         "language": "en",
         "text_size": "1",
         "window_width": "600",
-        "window_height": "600"
+        "window_height": "600",
+        "shadows": "True"
     },
     "multiplayer": {
         "username": "Player",
