--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ vitrix/__pycache__/
 vitrix/lib/__pycache__/
 vitrix/lib/weapons/__pycache__/
 vitrix/lib/items/__pycache__/
+vitrix/test.py
 venvs-config/
 data.txt
 build/
