--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ vitrix/__pycache__/
 vitrix/lib/__pycache__/
 vitrix/lib/weapons/__pycache__/
 vitrix/lib/items/__pycache__/
+vitrix/lib/UI/__pycache__/
+vitrix/lib/entities/__pycache__/
 vitrix/test.py
-*/*/*/__pycache__/
 venvs-config/
 data.txt
 build/
