--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ panda3d==1.10.11
 panda3d-gltf==0.13
 panda3d-simplepbr==0.10
 Pillow==9.1.0
-ursina==4.1.1
+git+https://github.com/ShadityZ/Vitrix-Engine.git#egg=vitrix_engine # for vitrix_engine
 venvctl==1.4.12
