--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-panda3d==1.10.11
-panda3d-gltf==0.13
-panda3d-simplepbr==0.10
-Pillow==9.1.0
-git+https://github.com/ShadityZ/Vitrix-Engine.git#egg=vitrix_engine # for vitrix_engine
+git+https://github.com/ShadityZ/Vitrix-Engine.git@v1.0#egg=vitrix_engine
 venvctl==1.4.12
