--- a/vitrix/user/settings.json
+++ b/vitrix/user/settings.json
@@ -4,7 +4,7 @@
         "text_size": "1",
         "window_width": "600",
         "window_height": "600",
-        "shadows": "True"
+        "shadows": "true"
     },
     "multiplayer": {
         "username": "Player",
