--- a/vitrix/user/settings.json
+++ b/vitrix/user/settings.json
@@ -1,15 +1,1 @@
-{
-    "game_settings": {
-        "language": "en",
-        "text_size": "1",
-        "window_width": "600",
-        "window_height": "600"
-    },
-    "multiplayer": {
-        "username": "Player"
-    },
-    "gameplay_settings": {
-        "fov": "85",
-        "shadows": "true"
-    }
-}
+{"game_settings": {"language": "en", "text_size": "1", "window_width": "600", "window_height": "600"}, "multiplayer": {"username": "Player"}, "gameplay_settings": {"fov": "130", "shadows": "true"}}
