--- a/vitrix/user/settings.json
+++ b/vitrix/user/settings.json
@@ -3,14 +3,14 @@
         "language": "en",
         "text_size": "1",
         "window_width": "600",
-        "window_height": "600",
-        "shadows": "True"
+        "window_height": "600"
     },
     "multiplayer": {
         "username": "Player",
         "icon": "icon.png"
     },
     "gameplay_settings": {
-        "fov": "85"
+        "fov": "85",
+        "shadows": "True"
     }
 }
