--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/ShadityZ/Vitrix-Engine.git@v1.1#egg=vitrix_engine
+git+https://github.com/ShadityZ/Vitrix-Engine.git#egg=vitrix_engine
 venvctl==1.4.12
 requests
